feat: check if slack is connected
